--- a/SwigRuntime/CMakeLists.txt
+++ b/SwigRuntime/CMakeLists.txt
@@ -4,7 +4,6 @@ MACRO(CREATE_SWIG_RUNTIME lang_option lang_postfix lang_link_libs)
   SET(source_file "${CMAKE_CURRENT_BINARY_DIR}/swigrun${lang_postfix}.cxx")
   SET(lib_name "SwigRuntime${lang_postfix}")
   
-  #SET_SOURCE_FILES_PROPERTIES("${source_file}" GENERATED)
   ADD_LIBRARY(${lib_name} SHARED "${source_file}")
   TARGET_LINK_LIBRARIES(${lib_name} "${lang_link_libs}")
   INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/${lang_postfix}-SWIG" ${lib_name})
@@ -43,20 +42,6 @@ IF(WRAP_ITK_PERL)
 ENDIF(WRAP_ITK_PERL)
 
 IF(WRAP_ITK_JAVA)
-  SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx GENERATED)
-  ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimeJava)
-  MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
-  ADD_CUSTOM_COMMAND(
-        COMMENT "run native swig on SwigExtras.i"
-        SOURCE ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i
-        COMMAND ${CSWIG} 
-        ARGS -nocable -noruntime ${IGNORE_WARNINGS} -o ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
-        -outdir "${WRAP_ITK_JAVA_DIR}/InsightToolkit"
-        -package InsightToolkit
-        -java -c++ ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i
-        TARGET ${LIBRARY_NAME}Java
-        OUTPUTS ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx
-        DEPENDS ${WrapITK_SOURCE_DIR}/SwigRuntime/JavaCWD.i ${CSWIG})
+   CREATE_SWIG_RUNTIME(-java Java "${JAVA_LIBRARY}")
 ENDIF(WRAP_ITK_JAVA)
 
