--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -46,11 +46,11 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
                  @ONLY IMMEDIATE)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
-SET(CONFIG_WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Data")
+SET(CONFIG_WRAP_ITK_DATA_ROOT "${WRAP_ITK_INSTALL_LOCATION}/Data")
 SET(CONFIG_WRAP_ITK_TEST_ROOT "<NO DEFAULT>")
-SET(CONFIG_PYTHON_SWIGLIB_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
-SET(CONFIG_PYTHON_SWIGPY_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
-SET(CONFIG_PYTHON_CONFIGPY_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python/Configuration")
+SET(CONFIG_PYTHON_SWIGLIB_DIR "${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
+SET(CONFIG_PYTHON_SWIGPY_DIR "${WRAP_ITK_INSTALL_LOCATION}/Python-SWIG")
+SET(CONFIG_PYTHON_CONFIGPY_DIR "${WRAP_ITK_INSTALL_LOCATION}/Python/Configuration")
 
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py"
@@ -121,7 +121,7 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/WrapITK.pth"
              @ONLY IMMEDIATE)
              
-SET(CONFIG_WRAP_ITK_PYTHON_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Python")
+SET(CONFIG_WRAP_ITK_PYTHON_DIR "${WRAP_ITK_INSTALL_LOCATION}/Python")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/WrapITK.pth"
              @ONLY IMMEDIATE)
