--- a/Tcl/CMakeLists.txt
+++ b/Tcl/CMakeLists.txt
@@ -33,9 +33,9 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 # Configure pkgIndex.tcl for the install tree.
-SET(WRAP_ITK_SCRIPT_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl")
-SET(WRAP_ITK_PACKAGE_DIR "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG")
-SET(WRAP_ITK_DATA_ROOT "${CMAKE_INSTALL_PREFIX}${WRAP_ITK_INSTALL_LOCATION}/Data")
+SET(WRAP_ITK_SCRIPT_DIR "${WRAP_ITK_INSTALL_LOCATION}/Tcl")
+SET(WRAP_ITK_PACKAGE_DIR "${WRAP_ITK_INSTALL_LOCATION}/Tcl-SWIG")
+SET(WRAP_ITK_DATA_ROOT "${WRAP_ITK_INSTALL_LOCATION}/Data")
 SET(WRAP_ITK_TEST_ROOT "<NO_DEFAULT>")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/pkgIndex.tcl.in"
                "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/pkgIndex.tcl"
