--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -10,6 +10,6 @@ WRAPPER_LIBRARY_CREATE_LIBRARY()
 
 IF(ITK_CSWIG_PYTHON)
   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
-  INSTALL_FILES(${WRAP_ITK_INSTALL_LOCATION}/Python FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
+  INSTALL_FILES("/Python" FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
 ENDIF(ITK_CSWIG_PYTHON)
 
