--- a/Java/CWD/CMakeLists.txt
+++ b/Java/CWD/CMakeLists.txt
@@ -1,7 +1,7 @@
 IF(WRAP_ITK_JAVA)
   SET_SOURCE_FILES_PROPERTIES(${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx GENERATED)
   ADD_LIBRARY(SwigRuntimeJava MODULE ${WrapITK_BINARY_DIR}/SwigRuntime/JavaCWDJava.cxx JavaCWD.cxx)
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/lib" SwigRuntimeJava)
+  INSTALL_TARGETS("/lib" SwigRuntimeJava)
   MAKE_DIRECTORY(${WRAP_ITK_JAVA_DIR}/InsightToolkit)
   ADD_CUSTOM_COMMAND(
         COMMENT "run native swig on SwigExtras.i"
