--- a/SwigRuntime/CMakeLists.txt
+++ b/SwigRuntime/CMakeLists.txt
@@ -6,7 +6,7 @@ MACRO(CREATE_SWIG_RUNTIME lang_option lang_postfix lang_link_libs)
   
   ADD_LIBRARY(${lib_name} SHARED "${source_file}")
   TARGET_LINK_LIBRARIES(${lib_name} "${lang_link_libs}")
-  INSTALL_TARGETS("${WRAP_ITK_INSTALL_LOCATION}/${lang_postfix}-SWIG" ${lib_name})
+  INSTALL_TARGETS("/${lang_postfix}-SWIG" ${lib_name})
   SET_TARGET_PROPERTIES(${lib_name} PROPERTIES LINK_FLAGS "${CSWIG_EXTRA_LINKFLAGS}")
 
   ADD_CUSTOM_COMMAND(
