--- a/Java/CMakeLists.txt
+++ b/Java/CMakeLists.txt
@@ -31,7 +31,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
   FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/itk_build_tree.mark
     "File next to InsightToolkit.jar to mark the build tree.\n"
     )
-  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES
+  INSTALL_FILES("/Java" FILES
     ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar )
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
@@ -72,7 +72,7 @@ IF(CMAKE_CONFIGURATION_TYPES)
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/${CMAKE_CFG_INTDIR}/InsightToolkit.jar)
   SET(DOLLAR "$")
-  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES ${WRAP_ITK_JAVA_DIR}/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
+  INSTALL_FILES("/Java" FILES ${WRAP_ITK_JAVA_DIR}/${DOLLAR}{BUILD_TYPE}/InsightToolkit.jar)
 ELSE(CMAKE_CONFIGURATION_TYPES)
   ADD_CUSTOM_COMMAND(
     OUTPUT ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar
@@ -83,7 +83,7 @@ ELSE(CMAKE_CONFIGURATION_TYPES)
     COMMENT "Java Archive"
     )
   ADD_CUSTOM_TARGET(ITKJavaJar ALL DEPENDS ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
-  INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Java" FILES ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
+  INSTALL_FILES("/Java" FILES ${WRAP_ITK_JAVA_DIR}/InsightToolkit.jar)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 ADD_DEPENDENCIES(ITKJavaJar ${ITK_JAVA_KIT_LIBS} SwigRuntimeJava)
 FOREACH(Kit ${ITK_KITS})
