--- a/Python/itkConfig.py.in
+++ b/Python/itkConfig.py.in
@@ -1,20 +1,29 @@
 """InsightToolkit configuration module: contains paths to libraries and language support files."""
 
+import os
+def normalized_path(path_parts):
+  if path_parts:
+    file_dir = os.path.split(__file__)[0]
+    return os.path.normpath(os.path.join(file_dir, *path_parts))
+
 # Assume that 'xxx' is the name of a wrapped library:
 # swig_lib: location of the _xxxPython.so swig-generated libraries
-swig_lib = '@CONFIG_PYTHON_SWIGLIB_DIR@'
+swig_lib = normalized_path(@CONFIG_PYTHON_SWIGLIB_DIR@)
 
 # swig_py: location of the xxxPython.py swig-generated python interfaces
-swig_py = '@CONFIG_PYTHON_SWIGPY_DIR@'
+swig_py = normalized_path(@CONFIG_PYTHON_SWIGPY_DIR@)
 
 # config_py: location of xxxConfix.py CMake-generated library descriptions 
-config_py = '@CONFIG_PYTHON_CONFIGPY_DIR@'
-
-# location of test files
-test_root = '@CONFIG_WRAP_ITK_TEST_ROOT@'
+config_py = normalized_path(@CONFIG_PYTHON_CONFIGPY_DIR@)
 
 # location for test input
-data_root = '@CONFIG_WRAP_ITK_DATA_ROOT@'
+data_root = normalized_path(@CONFIG_WRAP_ITK_DATA_ROOT@)
+
+# location of test files
+test_root = normalized_path(@CONFIG_WRAP_ITK_TEST_ROOT@)
 
 # location of doxygen-generated man pages
 doxygen_root = '@CONFIG_WRAP_ITK_DOXYGEN_ROOT@'
+
+del normalized_path
+del os
