Change Python site-packages dir detection to work on Windows as well.
darcs-hash:20060218132705-8b55d-ea03c7eaa64a7fce9dccbc54a53d36ec1943d6ee.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -132,11 +132,13 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              @ONLY IMMEDIATE)
 
 IF(PYTHON_EXECUTABLE)
+  FILE(WRITE ${CMAKE_CURRENT_BINARY_DIR}/det_spp.py "try:\n  import distutils.sysconfig; print distutils.sysconfig.get_python_lib()\nexcept: pass")
   EXEC_PROGRAM("${PYTHON_EXECUTABLE}"
-    ARGS "-c 'try:\n  import distutils.sysconfig; print distutils.sysconfig.get_python_lib()\nexcept: pass\n'"
+    ARGS "${CMAKE_CURRENT_BINARY_DIR}/det_spp.py"
     OUTPUT_VARIABLE py_spp
   )
 ENDIF(PYTHON_EXECUTABLE)
+
 SET(PY_SITE_PACKAGES_PATH "${py_spp}" CACHE PATH "Python site-packages directory to install a .pth file pointing at WrapITK Python modules.")
 MARK_AS_ADVANCED(PY_SITE_PACKAGES_PATH)
 IF(PY_SITE_PACKAGES_PATH)
