--- a/ExternalProjects/ItkVtkGlue/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/CMakeLists.txt
@@ -6,7 +6,7 @@ OPTION(INSTALL_DEVEL_FILES "Install C++ headers" ON)
 FIND_PACKAGE(ITK REQUIRED)
 FIND_PACKAGE(VTK REQUIRED)
 
-INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS} ${ITK_INCLUDE_DIRS} ${ItkVtk_SOURCE_DIR}/src)
+INCLUDE_DIRECTORIES(${VTK_INCLUDE_DIRS} ${ITK_INCLUDE_DIRS} ${ItkVtkGlue_SOURCE_DIR}/src)
 LINK_DIRECTORIES(${VTK_LIBRARY_DIRS} ${ITK_LIBRARY_DIRS})
 
 SUBDIRS(src)
