Fix ITK_CSWIG_PYTHON/WRAP_ITK_PYTHON check and add required library dependencies.
darcs-hash:20060218193759-8b55d-62e56eafdfaae052697a27590352a0ab75b5cdbc.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -8,8 +8,9 @@ SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA ITKBasicFiltersB)
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
 
-IF(ITK_CSWIG_PYTHON)
-  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python vtkImagingPythonD)
+IF(WRAP_ITK_PYTHON)
+  TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python
+                        vtkImagingPythonD ITKCommon ITKBasicFilters)
   INSTALL_FILES("/Python" FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
-ENDIF(ITK_CSWIG_PYTHON)
+ENDIF(WRAP_ITK_PYTHON)
 
