--- a/ConfigurationInputs/WrapITKConfig.cmake.in
+++ b/ConfigurationInputs/WrapITKConfig.cmake.in
@@ -35,14 +35,14 @@ SET(WRAP_covariant_vector_float @WRAP_covariant_vector_float@ CACHE BOOL "Wrap c
 SET(WRAP_covariant_vector_double @WRAP_covariant_vector_double@ CACHE BOOL "Wrap covariant vector double type")
 SET(WRAP_rgb_unsigned_char @WRAP_rgb_unsigned_char@ CACHE BOOL "Wrap RGB< unsigned char > type")
 SET(WRAP_rgb_unsigned_short @WRAP_rgb_unsigned_short@ CACHE BOOL "Wrap RGB< unsigned short > type")
-SET(WRAP_DIMS "@WRAP_DIMS@" CACHE STRING "dimensions available separated by semicolons (;)")
+SET(WRAP_ITK_DIMS "@WRAP_ITK_DIMS@" CACHE STRING "dimensions available separated by semicolons (;)")
 
 FOREACH(var ITK_DIR CableSwig_DIR WRAP_ITK_TCL WRAP_ITK_PYTHON WRAP_ITK_JAVA 
     WRAP_unsigned_char WRAP_unsigned_short WRAP_unsigned_long WRAP_signed_char
     WRAP_signed_short WRAP_signed_long WRAP_float WRAP_double WRAP_vector_float
     WRAP_vector_double WRAP_covariant_vector_float WRAP_covariant_vector_double
     WRAP_rgb_unsigned_char WRAP_rgb_unsigned_short
-    WRAP_DIMS)
+    WRAP_ITK_DIMS)
   MARK_AS_ADVANCED(${var})
 ENDFOREACH(var)
 
