--- a/ConfigurationInputs/WrapITKConfig.cmake.in
+++ b/ConfigurationInputs/WrapITKConfig.cmake.in
@@ -46,9 +46,6 @@ FOREACH(var ITK_DIR CableSwig_DIR WRAP_ITK_TCL WRAP_ITK_PYTHON WRAP_ITK_JAVA
   MARK_AS_ADVANCED(${var})
 ENDFOREACH(var)
 
-SET(WRAP_ITK_INSTALL_LOCATION "@CONFIG_WRAP_ITK_INSTALL_LOCATION@" CACHE STRING "Path to the top of the install tree. (USED INSTEAD OF CMAKE_INSTALL_PREFIX.)")
-SET(CMAKE_INSTALL_PREFIX "${WRAP_ITK_INSTALL_LOCATION}" CACHE INTERNAL "Always set to WRAP_ITK_INSTALL_LOCATION so WrapITK can provide an intelligent default." FORCE)
-
 SET(WRAP_ITK_CONFIG_DIR "@CONFIG_CONFIG_DIR@")
 SET(WRAP_ITK_CMAKE_DIR "@CONFIG_CMAKE_DIR@")
 IF(JAVA_OUTPUT_DIR)
@@ -60,6 +57,7 @@ ELSE(JAVA_OUTPUT_DIR)
   ENDIF(WRAP_ITK_JAVA)
 ENDIF(JAVA_OUTPUT_DIR)
 
+SET(WRAP_ITK_INSTALL_LOCATION "@CONFIG_WRAP_ITK_INSTALL_LOCATION@")
 SET(WRAP_ITK_SWIG_LIBRARY_DIRECTORY "@CONFIG_WRAP_ITK_SWIG_LIBRARY_DIRECTORY@")
 SET(WRAP_ITK_MASTER_INDEX_DIRECTORY "@CONFIG_WRAP_ITK_MASTER_INDEX_DIRECTORY@")
 
