Code cleanup, especially for python
darcs-hash:20060226221916-733a7-35445ce0e46540651ea6559ac431657b3ffdc0d1.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -23,40 +23,36 @@ ENDIF(DOXYGEN_MAN_PATH)
 ###############################################################################
 # Configure the path-dependent itkConfig.py
 
-# we specify these directories as python lists of path elements that make up
-# the relative path from the eventual location of itkConfig.py to the various
-# directories. Relative paths are used so that the file can be bundled up 
-# into an install conventiently. The python lists are used so that we don't
-# need a platform-dependent path separator (e.g. / or \).
+# we specify these directories with relative paths  so that the file can be 
+# bundled up into an install conventiently. Python will take care of turning
+# the / path separator into \ on windows if needed.
 
-SET(CONFIG_WRAP_ITK_DATA_ROOT "('..', 'Data')")
-SET(CONFIG_WRAP_ITK_TEST_ROOT "('..', 'Testing')")
-
-# SWIG interface files aren't config-dependent
-SET(CONFIG_PYTHON_CONFIGPY_DIR "('Configuration',)")
+SET(CONFIG_WRAP_ITK_DATA_ROOT "../Data")
+SET(CONFIG_WRAP_ITK_TEST_ROOT "../Testing")
+SET(CONFIG_PYTHON_CONFIGPY_DIR "Configuration")
 
 IF(CMAKE_CONFIGURATION_TYPES)
   FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
     # SWIG-generated libs and *.py files are sent to ${config} subdir
     # This assumes that LIBRARY_OUTPUT_PATH is WrapITK_BINARY_DIR/bin (bad!)
-    # We need a better way to do this.
-    SET(CONFIG_PYTHON_SWIGPY_DIR "('..', 'bin', '${config}')")
-    SET(CONFIG_PYTHON_SWIGLIB_DIR "('..', 'bin', '${config}')")
+    # TODO: We need a better way to do this.
+    SET(CONFIG_PYTHON_SWIGPY_DIR "../bin/${config}")
+    SET(CONFIG_PYTHON_SWIGLIB_DIR "../bin/${config}")
     CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                    "${WrapITK_BINARY_DIR}/Python/${config}/itkConfig.py"
                    @ONLY IMMEDIATE)
   ENDFOREACH(config)
 ELSE(CMAKE_CONFIGURATION_TYPES)
-  SET(CONFIG_PYTHON_SWIGPY_DIR "('..', 'bin')")
-  SET(CONFIG_PYTHON_SWIGLIB_DIR "('..', 'bin')")
+  SET(CONFIG_PYTHON_SWIGPY_DIR "../bin")
+  SET(CONFIG_PYTHON_SWIGLIB_DIR "../bin")
   CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                  "${WrapITK_BINARY_DIR}/Python/itkConfig.py"
                  @ONLY IMMEDIATE)
 ENDIF(CMAKE_CONFIGURATION_TYPES)
 
 SET(CONFIG_WRAP_ITK_TEST_ROOT "None")
-SET(CONFIG_PYTHON_SWIGLIB_DIR "('..', 'Python-SWIG')")
-SET(CONFIG_PYTHON_SWIGPY_DIR "('..', 'Python-SWIG')")
+SET(CONFIG_PYTHON_SWIGLIB_DIR "../Python-SWIG")
+SET(CONFIG_PYTHON_SWIGPY_DIR "../Python-SWIG")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                "${WrapITK_BINARY_DIR}/Python/InstallOnly/itkConfig.py"
               @ONLY IMMEDIATE)
