--- a/Python/itkConfig.py.in
+++ b/Python/itkConfig.py.in
@@ -1,26 +1,46 @@
-"""InsightToolkit configuration module: contains paths to libraries and language support files."""
+"""InsightToolkit configuration module.
+This module contains user options and  paths to libraries and language support
+files used internally.
+User options can be set by importing itkConfig and changing the option values.
+Currently-supported options are:
+  DebugLevel: must be one of SILENT, WARN, or ERROR (these values are defined
+    in itkConfig). Default is WARN.
+  ImportCallback: importing itk libraries can take a while. ImportCallback will
+    be called when each new library is imported in the import process. 
+    ImportCallback must be a function that can take the name of the library
+    being imported as a parameter."""
+
+
+# User options
+SILENT = 0; WARN = 1; ERROR = 2
+DebugLevel = WARN
+
+ImportCallback = None
+
+
+# Internal settings
 
 import os
-def normalized_path(path_parts):
-  if path_parts:
+def normalized_path(relative_posix_path):
+  if relative_posix_path != 'None':
     file_dir = os.path.split(__file__)[0]
-    return os.path.normpath(os.path.join(file_dir, *path_parts))
+    relative_path = relative_posix_path.replace('/', os.sep)
+    return os.path.normpath(os.path.join(file_dir, relative_path))
 
-# Assume that 'xxx' is the name of a wrapped library:
-# swig_lib: location of the _xxxPython.so swig-generated libraries
-swig_lib = normalized_path(@CONFIG_PYTHON_SWIGLIB_DIR@)
+# swig_lib: location of the swig-generated shared libraries
+swig_lib = normalized_path('@CONFIG_PYTHON_SWIGLIB_DIR@')
 
 # swig_py: location of the xxxPython.py swig-generated python interfaces
-swig_py = normalized_path(@CONFIG_PYTHON_SWIGPY_DIR@)
+swig_py = normalized_path('@CONFIG_PYTHON_SWIGPY_DIR@')
 
 # config_py: location of xxxConfix.py CMake-generated library descriptions 
-config_py = normalized_path(@CONFIG_PYTHON_CONFIGPY_DIR@)
+config_py = normalized_path('@CONFIG_PYTHON_CONFIGPY_DIR@')
 
 # location for test input
-data_root = normalized_path(@CONFIG_WRAP_ITK_DATA_ROOT@)
+data_root = normalized_path('@CONFIG_WRAP_ITK_DATA_ROOT@')
 
 # location of test files
-test_root = normalized_path(@CONFIG_WRAP_ITK_TEST_ROOT@)
+test_root = normalized_path('@CONFIG_WRAP_ITK_TEST_ROOT@')
 
 # location of doxygen-generated man pages
 doxygen_root = '@CONFIG_WRAP_ITK_DOXYGEN_ROOT@'
