--- a/ConfigurationInputs/WrapITKConfig.cmake.in
+++ b/ConfigurationInputs/WrapITKConfig.cmake.in
@@ -60,6 +60,7 @@ ENDIF(JAVA_OUTPUT_DIR)
 SET(WRAP_ITK_INSTALL_LOCATION "@CONFIG_WRAP_ITK_INSTALL_LOCATION@")
 SET(WRAP_ITK_SWIG_LIBRARY_DIRECTORY "@CONFIG_WRAP_ITK_SWIG_LIBRARY_DIRECTORY@")
 SET(WRAP_ITK_MASTER_INDEX_DIRECTORY "@CONFIG_WRAP_ITK_MASTER_INDEX_DIRECTORY@")
+SET(WRAP_ITK_MODULES "@CONFIG_WRAP_ITK_MODULES@")
 
 # Now include ConfigureWrapping
 INCLUDE("${WRAP_ITK_CMAKE_DIR}/ConfigureWrapping.cmake")
