Fix install issues.
darcs-hash:20060228085636-733a7-e868bb508b3252ccf18fd2420f924b8587f38082.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ CONFIGURE_FILE("${WRAP_ITK_CONFIG_DIR}/WrapITKConfig.cmake.in"
                "${WrapITK_BINARY_DIR}/InstallOnly/WrapITKConfig.cmake"
                @ONLY IMMEDIATE)
 
-SET(CONFIG_WRAP_ITK_DIR "${WRAP_ITK_INSTALL_LOCATION}")
+SET(CONFIG_WRAP_ITK_DIR "${CMAKE_INSTALL_PREFIX}")
 CONFIGURE_FILE("${WRAP_ITK_CONFIG_DIR}/FindWrapITK.cmake.in"
                "${WrapITK_BINARY_DIR}/InstallOnly/FindWrapITK.cmake"
                @ONLY IMMEDIATE)
