fix install path of itkvtk.py
darcs-hash:20060228194816-2fc9d-64f2d2114a5341b21db8a8d85751d3b01c38475e.gz

--- a/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
+++ b/ExternalProjects/ItkVtkGlue/Wrapping/CMakeLists.txt
@@ -11,6 +11,6 @@ WRAPPER_LIBRARY_CREATE_LIBRARY()
 IF(WRAP_ITK_PYTHON)
   TARGET_LINK_LIBRARIES(_${WRAPPER_LIBRARY_NAME}Python
                         vtkImagingPythonD ITKCommon ITKBasicFilters)
-  INSTALL_FILES("/Python" FILES "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
+  WRAP_ITK_INSTALL("/Python" "${CMAKE_CURRENT_SOURCE_DIR}/Python/itkvtk.py")
 ENDIF(WRAP_ITK_PYTHON)
 
