add VectorImage support
darcs-hash:20060307212323-2fc9d-300b356189686cacb64767ac3d0370e5c6073cea.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -7,7 +7,9 @@ SET(WRAPPER_LIBRARY_GROUPS
     itkVector
     itkPoint
     itkRGBPixel
+    itkVariableLengthVector
     itkImage
+    itkVectorImage
     itkLevelSet
     itkDefaultStaticMeshTraits
     ITKCommonBase
