fix python modules path
darcs-hash:20060324154724-2fc9d-3db096dd0a067dfffb5da100c93495873356be8a.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -122,7 +122,7 @@ CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/WrapITK.pth"
              @ONLY IMMEDIATE)
              
-SET(CONFIG_WRAP_ITK_PYTHON_DIR "${CMAKE_INSTALL_PREFIX}/Python")
+SET(CONFIG_WRAP_ITK_PYTHON_DIR "${CMAKE_INSTALL_PREFIX}/${WRAP_ITK_INSTALL_PREFIX}/Python")
 CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/WrapITK.pth.in"
              "${CMAKE_CURRENT_BINARY_DIR}/InstallOnly/WrapITK.pth"
              @ONLY IMMEDIATE)
